--- a/SkateAppFYP/package.json
+++ b/SkateAppFYP/package.json
@@ -19,7 +19,9 @@
     "react-native-gesture-handler": "^1.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.2.0"
+    "react-native-screens": "^2.2.0",
+    "react-native-svg": "^12.0.3",
+    "react-native-svg-icon": "^0.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
