--- a/SkateAppFYP/android/build.gradle
+++ b/SkateAppFYP/android/build.gradle
@@ -6,6 +6,10 @@ buildscript {
         minSdkVersion = 16
         compileSdkVersion = 28
         targetSdkVersion = 28
+        supportLibVersion   = "28.0.0"
+        playServicesVersion = "17.0.0" 
+        googlePlayServicesVersion   = "17.0.0"
+        androidMapsUtilsVersion     = "0.5+"
     }
     repositories {
         google()
@@ -13,9 +17,8 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.4.2")
-
         // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // in the individual module build.gradle files        
     }
 }
 
