--- a/SkateAppFYP/ios/Podfile
+++ b/SkateAppFYP/ios/Podfile
@@ -34,10 +34,16 @@ target 'SkateAppFYP' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  # React Native Maps dependencies
+  rn_maps_path = '../node_modules/react-native-maps'
+  pod 'react-native-google-maps', :path => rn_maps_path
+  pod 'GoogleMaps'
+  pod 'Google-Maps-iOS-Utils'
+
   target 'SkateAppFYPTests' do
     inherit! :search_paths
     # Pods for testing
-  end
+  end  
 
   use_native_modules!
 end
