--- a/SkateAppFYP/package.json
+++ b/SkateAppFYP/package.json
@@ -8,7 +8,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "release": "cd android && ./gradlew assembleRelease"
+    "build-release": "cd android && ./gradlew assembleRelease",
+    "install-release": "cd android /app/build/outputs/apk/release && adb install app-release.apk"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.7",
