--- a/SkateAppFYP/package.json
+++ b/SkateAppFYP/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "lint": "eslint .",
     "build-release": "cd android && ./gradlew assembleRelease",
-    "install-release": "cd android /app/build/outputs/apk/release && adb install app-release.apk"
+    "install-release": "cd android/app/build/outputs/apk/release && adb install app-release.apk"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.7",
