--- a/SkateAppFYP/ios/SkateAppFYP/Info.plist
+++ b/SkateAppFYP/ios/SkateAppFYP/Info.plist
@@ -37,8 +37,12 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Location required for maps.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  	<string>Your location is required for the map.</string>
+  	<key>NSLocationAlwaysUsageDescription</key>
+  	<string>Your location is required for the map.</string>
+  	<key>NSLocationWhenInUseUsageDescription</key>
+  	<string>Your location is required for the map.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
