--- a/SkateAppFYP/package.json
+++ b/SkateAppFYP/package.json
@@ -12,6 +12,7 @@
     "install-release": "cd android/app/build/outputs/apk/release && adb install app-release.apk"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.3.0",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/bottom-tabs": "^5.1.1",
