--- a/SkateAppFYP/package.json
+++ b/SkateAppFYP/package.json
@@ -24,6 +24,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-image-picker": "^2.3.1",
     "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-maps": "0.26.1",
     "react-native-modal": "^11.5.4",
