--- a/SkateAppFYP/package.json
+++ b/SkateAppFYP/package.json
@@ -30,6 +30,7 @@
     "react-native-modal": "^11.5.4",
     "react-native-open-maps": "^0.3.5",
     "react-native-permissions": "^2.0.10",
+    "react-native-picker-select": "^6.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
