--- a/SkateAppFYP/package.json
+++ b/SkateAppFYP/package.json
@@ -28,6 +28,7 @@
     "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-maps": "0.26.1",
     "react-native-modal": "^11.5.4",
+    "react-native-multi-select-picker": "^1.0.11",
     "react-native-open-maps": "^0.3.5",
     "react-native-permissions": "^2.0.10",
     "react-native-picker-select": "^6.6.0",
