--- a/SkateAppFYP/package.json
+++ b/SkateAppFYP/package.json
@@ -18,9 +18,9 @@
     "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "react": "16.9.0",
-    "react-native": "0.61.5",
+    "react-native": "^0.63.4",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-maps": "0.26.1",
